<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_show_date"
        android:title="@string/menu_item_show_date"
        app:showAsAction="always"
        android:orderInCategory="1"
        />
    <item
        android:id="@+id/menu_item_show_calendar"
        android:icon="@drawable/baseline_calendar_today_black_48"
        android:orderInCategory="1"
        android:title="@string/menu_item_show_calendar"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_item_create_order"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/menu_item_create_order"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        />

</menu>