<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="дата"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textViewSetSubCat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/textView_in_dialog"
        android:textAlignment="center"
        android:textSize="14sp" />

    <Spinner
        android:id="@+id/spiner_categoty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog">

    </Spinner>

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="ваша покупка"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editText_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="стоимость покупки"
        android:inputType="number"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editText_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="количество"
        android:inputType="number"
        android:textSize="14sp" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView_subCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="1"
        android:dropDownAnchor="@+id/spiner_categoty"
        android:hint="@string/actv_hint_ru"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonCancel" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_weight="1"
            android:text="@string/buttonOk" />
    </LinearLayout>


</LinearLayout>